--- a/Graffo.Web/Views/Shared/_LayoutPage.cshtml
+++ b/Graffo.Web/Views/Shared/_LayoutPage.cshtml
@@ -9,9 +9,10 @@
     <link href="~/Content/bootstrap-theme.css" rel="stylesheet" />
     <link href="~/Content/graffo.css" rel="stylesheet" />
 
-    <script src="~/Scripts/jquery-2.1.0.js"></script>
-    <script src="~/Scripts/highcharts.js"></script>
-
+    <script src="~/Scripts/jquery-1.9.1.js"></script>
+    <script src="~/Scripts/angular.js"></script>
+    <script src="~/Scripts/Highcharts-4.0.1/js/highcharts.js"></script>
+    <script src="~/Scripts/highcharts-ng.js"></script>
     <!--[if lt IE 9]>
       <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
